# LeOpinion

./: .env.example  CLAUDE.md  DAEMONIZING.md  GEMINI.md  README.md  config.yaml.example  pyproject.toml  run.sh
src/: __init__.py  checkpoint.py  config.py  main.py  scraper.py  storage.py
systemd/: leopinion-evening.timer  leopinion-morning.timer  leopinion.service  leopinion.timer  lescraper-evening.timer  lescraper-morning.timer  lescraper.service  lescraper.timer
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/unit/: test_checkpoint.py  test_config.py  test_main.py  test_storage.py
