[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leopinion"
version = "1.0.0"
description = "Twitter/X scraper for NLP projects. Scrapes broad topics and stores tweets in PostgreSQL."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "asyncpg>=0.31.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "socksio>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.47",
    "twscrape>=0.17.0",
]

[project.scripts]
leopinion = "src.main:main"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
timeout = 60

[tool.coverage.run]
source = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
